Add Starter/Complete download layout, create Complete packages
- project-walkthrough: 2x3 table with Starter (empty output) and Complete
  (all generated output) rows for Stata/R/Python
- Complete packages created by running each master script
- Fix directory tree to show actual starter contents (empty output dirs,
  iv_data.csv and rd_data.csv in build/input/)
- bac-replication: fix description (FARS data is downloaded, not included)
- texting-bans: update description (texting_ban_dates.csv in build/input/)

--- a/tutorial/examples/bac-replication.html
+++ b/tutorial/examples/bac-replication.html
@@ -1487,7 +1487,7 @@ plt.savefig(ANALYSIS / "output" / "figures" / "event_study.png",
       Python Package (.zip)
     </a>
   </div>
-  <p style="font-size: 0.9em; color: var(--muted);">Each package includes: master script, build scripts, analysis scripts, raw data, cleaned datasets, and output figures. Run the master script to reproduce all results.</p>
+  <p style="font-size: 0.9em; color: var(--muted);">Each package includes: master script, build scripts, and analysis scripts. FARS data (~1 GB) is downloaded automatically when you run the master script. The first run takes 10-15 minutes; subsequent runs use cached data.</p>
 </section>
 
 <div style="margin-top: 40px; padding-top: 24px; border-top: 1px solid var(--border);">
