--- a/tutorial/project-walkthrough.html
+++ b/tutorial/project-walkthrough.html
@@ -8,6 +8,10 @@ current_page: project-walkthrough
 
 <p>The project asks a simple question: <strong>does a state-level policy reduce fatal car crashes?</strong> We start at the end — with the research question and the estimating equation — and work backwards to figure out what the data must look like, then build it from raw ingredients. Along the way, you'll load data, clean, merge multiple datasets, run a difference-in-differences analysis with an event study, and produce publication-quality tables and figures. We also cover instrumental variables and regression discontinuity as standalone analyses.</p>
 
+<p style="text-align: center; margin: 1.5em 0;">
+  <a href="data/project-walkthrough/project_walkthrough_slides.pdf" download class="download-btn" style="background: #2c3e50;">Slides (PDF)</a>
+</p>
+
 <!-- ============================================================ -->
 <!-- PROJECT DIRECTORY SETUP -->
 <!-- ============================================================ -->
