--- a/tutorial/project-walkthrough.html
+++ b/tutorial/project-walkthrough.html
@@ -1324,18 +1324,18 @@ fig.savefig('analysis/output/figures/rd_plot.png', dpi=300){% endcapture %}
   <p>Practice the techniques from this walkthrough. Each ZIP contains the exercise PDF, a codebook, and all necessary datasets.</p>
 
   {% capture ex1_content %}<div style="text-align: center;">
-    <p><strong>Exercise 1 (Basic)</strong> — Data cleaning, merging, descriptive statistics, and difference-in-differences.</p>
+    <p>Data cleaning, merging, descriptive statistics, and difference-in-differences.</p>
     <div style="display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;">
-      <a href="data/exercises/exercise1.zip" download class="download-btn">Exercise 1</a>
+      <a href="data/exercises/exercise1.zip" download class="download-btn">Download</a>
       <!-- <a href="data/exercises/exercise1-solutions.zip" download class="download-btn">Solutions</a> -->
     </div>
   </div>{% endcapture %}
   {% include "callout.liquid", type: "info", heading: "Exercise 1 (Basic)", content: ex1_content %}
 
   {% capture ex2_content %}<div style="text-align: center;">
-    <p><strong>Exercise 2 (Advanced)</strong> — Merging, two-way fixed effects, event studies, and instrumental variables.</p>
+    <p>Merging, two-way fixed effects, event studies, and instrumental variables.</p>
     <div style="display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;">
-      <a href="data/exercises/exercise2.zip" download class="download-btn">Exercise 2</a>
+      <a href="data/exercises/exercise2.zip" download class="download-btn">Download</a>
       <!-- <a href="data/exercises/exercise2-solutions.zip" download class="download-btn">Solutions</a> -->
     </div>
   </div>{% endcapture %}
