Fix stataRun instructions: correct shortcut, add setup steps

--- a/tutorial/project-walkthrough.html
+++ b/tutorial/project-walkthrough.html
@@ -38,7 +38,7 @@ current_page: project-walkthrough
   </ul>
   <p>The <code>-b</code> (Mac/Linux) or <code>/e</code> (Windows) flag runs Stata in batch mode — output goes to a <code>.log</code> file in the working directory instead of the GUI.</p>
 
-  <p><strong>Stata (VS Code):</strong> Install the <strong>Stata Enhanced</strong> extension for syntax highlighting and the <strong>stataRun</strong> extension to send code to Stata. Press <kbd>Ctrl+Shift+D</kbd> to run the current file or selection.</p>
+  <p><strong>Stata (VS Code):</strong> Install the <a href="https://marketplace.visualstudio.com/items?itemName=kylebarron.stata-enhanced">Stata Enhanced</a> extension for syntax highlighting and <a href="https://marketplace.visualstudio.com/items?itemName=Yeaoh.stataRun">stataRun</a> to run code directly. After installing stataRun, open VS Code settings and set the path to your Stata executable (e.g. <code>/Applications/Stata/StataMP.app/Contents/MacOS/stata-mp</code>). Then open a <code>.do</code> file and press <kbd>Ctrl+Shift+A</kbd> (<kbd>Cmd+Shift+A</kbd> on Mac) to run the entire file.</p>
 
   <p><strong>R:</strong> Run <code>Rscript master.R</code> from the terminal, or open the project in RStudio and source the master file.</p>
 
