Fix Stata root path: require explicit path instead of "."
Using global root "." fails when running via stataRun in VS Code
because Stata's working directory defaults to ~/Documents/Stata,
not the project folder. Now all scripts use "/path/to/pkg-stata"
as a placeholder that students must change.

--- a/tutorial/project-walkthrough.html
+++ b/tutorial/project-walkthrough.html
@@ -108,8 +108,8 @@ current_page: project-walkthrough
 clear all
 set more off
 
-* Set root directory (CHANGE THIS to your project path)
-global root "."
+* >>> CHANGE THIS to your project path <<<
+global root "/path/to/pkg-stata"
 global build "$root/build"
 global analysis "$root/analysis"
 
