Comment out example treatment lists on finding-project page

--- a/tutorial/finding-project.html
+++ b/tutorial/finding-project.html
@@ -96,6 +96,7 @@ current_page: finding-project
     </div>
   </div>
 
+  <!-- Example questions commented out — don't want to give students too many ideas
   <h3 id="example-questions">Example Questions</h3>
   <div style="background: #f5f5f5; padding: 20px; border-radius: 8px; margin: 16px 0;">
     <ul style="margin: 0; padding-left: 20px; line-height: 2;">
@@ -107,6 +108,7 @@ current_page: finding-project
       <li>Does recreational marijuana legalization affect alcohol consumption?</li>
     </ul>
   </div>
+  -->
 </section>
 
 <section id="identification" class="tutorial-section">
@@ -134,6 +136,7 @@ current_page: finding-project
     <p style="margin: 0;">This means <strong>your treatment should have happened some time ago</strong>—you need enough post-treatment data to measure effects. Most successful projects involve policies introduced in the <strong>2000s or 2010s</strong>, not the 2020s. A policy from 2023 gives you very little post-treatment data to work with.</p>{% endcapture %}
   {% include "callout.liquid", type: "warning", content: callout_content %}
 
+  <!-- Example treatment grid commented out — don't want to give students too many ideas
   <p>Below are examples of policies with staggered adoption across states. Each is a potential <strong>treatment</strong> for a DiD design.</p>
 
   <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 16px; margin: 20px 0;">
@@ -216,6 +219,7 @@ current_page: finding-project
       </ul>
     </div>
   </div>
+  -->
 
   {% capture kp_content %}<h4>Turning a Treatment into a Project</h4>
     <p style="margin: 8px 0 0;">Once you've identified a treatment (policy) that interests you, ask yourself three questions:</p>
